@@ -5,7 +5,7 @@ Plugin URI: https://wpsitesync.com/downloads/wpsitesync-for-pull/
 Description: Allow Content Creators to "Pull" Content from the Target site into the Source site.
 Author: WPSiteSync
 Author URI: https://wpsitesync.com
-Version: 2.2.2
+Version: 2.3
 Text Domain: wpsitesync-pull
 
 The PHP code portions are distributed under the GPL license. If not otherwise stated, all
@@ -28,9 +28,9 @@ if (!class_exists('WPSiteSync_Pull')) {
 		private static $_instance = NULL;
 
 		const PLUGIN_NAME = 'WPSiteSync for Pull';
-		const PLUGIN_VERSION = '2.2.2';
+		const PLUGIN_VERSION = '2.3';
 		const PLUGIN_KEY = '4151f50e546c7b0a53994d4c27f4cf31';
-		const REQUIRED_VERSION = '1.5.4';								// minimum version of WPSiteSync required for this add-on to initialize
+		const REQUIRED_VERSION = '1.6';								// minimum version of WPSiteSync required for this add-on to initialize
 
 		private $_license = NULL;
 		private $_push_controller = NULL;
@@ -258,7 +258,7 @@ SyncDebug::log(__METHOD__.'():' . __LINE__ . ' ERROR: unable to create post on S
 
 				$args['post_id'] = $source_post_id;
 			}
-SyncDebug::log(__METHOD__ . '():' . __LINE__ . ' args=' . var_export($args, TRUE));
+SyncDebug::log(__METHOD__ . '():' . __LINE__ . ' args=' . SyncDebug::arr_sanitize($args));
 
 			// return the filter value
 			return $args;
