@@ -1,10 +1,11 @@
 * fix: Address issue when using older versions of WPSiteSync Pull.
 * enhancement: Add filters to allow add-ons to conditionally disable Pull button.
 * fix: Only display "Search for Pull" button on list pages for allowed Post Types.
-* enhancement: Update init process to use improved initialization mechanism with v1.5.5.
-* enhancment: Check for minimum required version of WPSiteSync.
+* enhancement: Update init process to use improved SyncApiController initialization mechanism.
+* enhancment: Check for minimum required version of WPSiteSync and disable if not present.
 * fix: Problem with search modal not displaying in Gutenberg editor (Thanks Wessel K.)
 * fix: Address runtime error when handling upload error messages.
 * fix: Problem with Cancel button not working.
 * enhancement: Add an "info" icon following error messages displayed in Search dialog with links to Knowledge Base article.
 * fix: Resolve PHP error that occurs when post edit list is empty.
+* fix: Resolve Javascript incompatibilty with Beaver Builder.
